[package]
name = "oauth4os"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for oauth4os — OAuth 2.0 proxy for OpenSearch"
license = "Apache-2.0"
repository = "https://github.com/seraphjiang/oauth4os"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
